fix: menu unreadable in service catalog

--- a/css/styles.scss
+++ b/css/styles.scss
@@ -1447,7 +1447,7 @@ a.plugin_formcreator_formTile_title {
 }
 
 .plugin_formcreator_leftHeader a, .plugin_formcreator_myname {
-   color: #FFF;
+   color: #FFF !important;
    height: 35px;
    line-height: 35px;
 }
